all done except the link

--- a/tex_files/abstract.tex
+++ b/tex_files/abstract.tex
@@ -3,12 +3,7 @@
 \pdfbookmark[0]{Abstract}{Abstract}
 \addchap*{Abstract}
 \label{sec:abstract}
+Covid-19 has had a significant impact on daily life since the initial outbreak of the global pandemic in late 2019. Countries have been affected to varying degrees, depending on government actions and country characteristics such as infrastructure and demographics. Using Norway and Germany as a case study, this thesis aims to determine which factors influence the risk of infection in each country, using Bayesian modelling and a non-Bayesian machine learning approach. Specifically, the relationship between infection rates and demographic and infrastructural characteristics in a municipality at a fixed point in time is investigated and the effectiveness of a Bayesian model in this context is compared with a machine learning algorithm. In addition, temporal modelling is used to assess the usefulness of government interventions, the impact of changes in mobility behaviour and the prevalence of different strains of Covid-19 in relation to infection numbers. The results show that a spatial model is more useful than a machine learning model in this context. For Germany, it is found that the logarithmic trade tax in a municipality, the share of the vote for the right-wing AfD party and the population density have a positive influence on the infection figures. For Norway, the number of immigrants in a municipality, the number of unemployed immigrants in a municipality and population density are found to have a positive association with infection rates, while the proportion of women in a municipality is negatively associated with infection rates. The temporal models identify higher workplace mobility as a factor significantly influencing the risk of infection in Germany and Norway.
 
-\blindtext
-
-\vspace*{20mm}
-
-{\usekomafont{chapter}Abstract (different language)}
-\label{sec:abstract-diff}
-
-\blindtext
+\textbf{Keywords:} Spatial modelling, Bayesian modelling, Disease mapping, Machine learning
+\clearpage
