--- a/tex_files/chapter-conclusion.tex
+++ b/tex_files/chapter-conclusion.tex
@@ -1,5 +1,12 @@
 % !TEX root = ../my-thesis.tex
 %
-\chapter{Conclusion}
-This research aimed to identify factors that have a significant influence on the spread of Covid-19 in Germany and Norway using Bayesian modelling. Based on the calculated models, it can be concluded that the population density, the percentage of the vote for the right-wing party AfD and the logarithmic trade tax are important factors influencing the spread of the viral disease in Germany. For Norway, it was found that the urban density, the number of unemployed immigrants, the total number of immigrants as well as the number of aerodromes in a municipality and the female to male ratio are important factors. The results indicate that in different countries different factors are influencing infection numbers. It has to be said however, that some of the findings are not in line with current research, specifically the influence of the logarithmic trade tax, the number of aerodromes and the proportion of females. 
-blabla why spatio-temporal models were not possible blabla predictive models might make sense for norway bc spatial effect not that strong
+\chapter{Conclusion}\label{sec:conclussion}
+The aim of this work was to identify factors that have a significant impact on the current Covid-19 infection numbers in Germany and Norway using both a Bayesian approach that takes into account the spatial neighbourhood structure of each country and a non-Bayesian machine learning approach, and to compare these approaches to see which one proves more useful for this type of analysis. Another goal was to determine factors influencing infection numbers over time, namely government actions in response to the pandemic, changes in population mobility patterns, and the prevalence of different strains of Covid-19. \\
+Based on the analysis of the differences between the spatial Bayesian and the non-Bayesian models for which no temporal effect is used, it can be concluded that the use of the Bayesian model with inclusion of a spatial term showed superior performance in terms of the mean absolute error, both in training and in testing. This was observed for Germany and for Norway. \\
+For Germany, the factors that have a significant impact on the prevalence of Covid-19 are population density, the percentage of votes for the right-wing party AfD and the logarithmic trade tax. All three factors had a positive effect on the predicted infection rates, with current research clearly supporting the link between population density and infection rates, as well as the link between right-wing parties and the tendency for people who support these parties to be at higher risk of infection due to not following Covid-19 guidelines. On the other hand, recent research suggests that people living in higher income or richer regions have a lower risk of infection, while the opposite is suggested by the model calculated for Germany. \\
+For Norway, these factors are urban density, the number of unemployed immigrants in a municipality, the total number of immigrants in a municipality and the proportion of women. The proportion of women is the only effect where a negative influence on the predicted infection numbers is observed. However, this association is not supported by current research which suggests that men and women are equally likely to contract Covid-19. No research has yet been conducted to analyse the association between unemployed immigrants and the risk of Covid-19, which makes it difficult to evaluate this effect as there is no research to compare it to. The association between immigrants in Norway and the risk of infection with Covid-19, as well as the association between the risk of infection and urban density, is consistent with current research which suggests that immigrants in Norway have a higher risk of infection and that higher density in urban areas leads to a higher risk of infection. \\
+Temporal modelling proved more difficult, with no distribution fitting the data reasonably well for Germany or Norway. A small test size limited the interpretation of the results. For both countries, the only significant effect on infection rates found was mobility in workplaces with a higher workplace mobility leading to a higher risk of infection. This is in line with current research. \\
+Based on these conclusions, people living in areas with characteristics such as a higher proportion of people voting for right-wing parties or a higher population or urban density should be cautious in their daily lives and keep a safe distance from other people to limit their risk of contracting Covid-19. \\
+Further research is needed to determine the relationship between areas in Germany that have a higher logarithmic trade tax and the risk of contracting Covid-19 in these areas. Research can never take all factors into account. Therefore, the association between these two variables could possibly be explained by a third variable. The same applies to the association between the proportion of women in a Norwegian municipality and the risk of contracting Covid-19.  \\
+Future research could analyse the spatio-temporal relationship between the risk of infection and various factors such as government measures. In addition to nationwide government measures, there are local government measures, both in Germany and Norway. Obtaining this data is a time-consuming task that would require manual collection of this data from official local government sources, as currently no comprehensive dataset exists for either country. Developing a spatio-temporal model based on the demographic and infrastructural variables used for the spatial models in this thesis, as well as the variables used for the temporal models, has the potential to lead to new insights into which factors are driving up infection rates and which measures are successful in preventing new infections. \\
+In summary, this thesis has shown that a Bayesian approach that models the spatial neighbourhood structure in a country is superior to an approach where no spatial neighbourhood structure is modelled. Furthermore, several factors were found to positively influence the risk of Covid-19 infection, both in Germany and Norway, and are supported by current research.
