--- a/tex_files/my-thesis-setup.tex
+++ b/tex_files/my-thesis-setup.tex
@@ -11,30 +11,18 @@
 % **************************************************
 % Information and Commands for Reuse
 % **************************************************
-\newcommand{\thesisTitle}{Something something Corona}
-\newcommand{\thesisName}{Ricardo Langner}
+\newcommand{\thesisTitle}{Modelling of Viral Disease Spread}
+\newcommand{\thesisName}{Nico Hahn}
 \newcommand{\thesisSubject}{Documentation}
 \newcommand{\thesisDate}{June 21, 2021}
 \newcommand{\thesisVersion}{Final version}
 
-\newcommand{\thesisFirstReviewer}{Jane Doe}
-\newcommand{\thesisFirstReviewerUniversity}{\protect{Clean Thesis Style University}}
-\newcommand{\thesisFirstReviewerDepartment}{Department of Clean Thesis Style}
+\newcommand{\thesisFirstSupervisor}{Sigrunn Holbek Sørbye}
 
-\newcommand{\thesisSecondReviewer}{John Doe}
-\newcommand{\thesisSecondReviewerUniversity}{\protect{Clean Thesis Style University}}
-\newcommand{\thesisSecondReviewerDepartment}{Department of Clean Thesis Style}
-
-\newcommand{\thesisFirstSupervisor}{Jane Doe}
-\newcommand{\thesisSecondSupervisor}{John Smith}
-
-\newcommand{\thesisUniversity}{\protect{Clean Thesis Style University}}
-\newcommand{\thesisUniversityDepartment}{Department of Clean Thesis Style}
-\newcommand{\thesisUniversityInstitute}{Institute for Clean Thesis Dev}
-\newcommand{\thesisUniversityGroup}{Clean Thesis Group (CTG)}
-\newcommand{\thesisUniversityCity}{City}
-\newcommand{\thesisUniversityStreetAddress}{Street address}
-\newcommand{\thesisUniversityPostalCode}{Postal Code}
+\newcommand{\thesisUniversity}{\protect{UiT - The Arctic University of Norway}}
+\newcommand{\thesisUniversityDepartment}{Department of Mathematics and Statistics}
+\newcommand{\thesisUniversityGroup}{Statistics and Data Analysis}
+\newcommand{\thesisUniversityCity}{Tromsø}
 
 
 % **************************************************
