--- a/tex_files/declaration.tex
+++ b/tex_files/declaration.tex
@@ -8,7 +8,7 @@
 \label{sec:declaration}
 \thispagestyle{empty}
 
-You can put your declaration here, to declare that you have completed your work solely and only with the help of the references you mentioned.
+ I herewith formally declare that I have written the submitted thesis independently. I did not use any outside support except for the quoted literature and other sources mentioned in the thesis. I clearly marked and separately listed all the literature and all the other sources which I employed when producing this academic work, either literally or in content.
 
 \bigskip
 
